Fix z-index of user link

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,7 @@ nav #apps:hover::before {
   border: 2px solid #fff;
   border-radius: 50%;
   opacity: 1;
+  z-index: 10;
 }
 #user:hover {
   text-decoration: none;
